# rag-agent-system

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.py  main.py  pyproject.toml
data/: collections.py  loader.py  test.csv
eval/: eval_dev.py  eval_test.py
service/agent/: openai_client.py  openai_service.py
service/agent/dto/: agent_request.py  agent_response.py
service/agent/prompt/: response_schema.py  system_prompt.py
service/retrieval/: retrieval_service.py
service/retrieval/dto/: retrieval_dto.py
